Fix: make photo fully visible and larger (3/4 screen)

--- a/css/style.css
+++ b/css/style.css
@@ -16,7 +16,7 @@ body {
 }
 
 #card, #card-front, #card-inside {
-  height: 580px;
+  height: 620px;
 }
 
 .wrap {
@@ -378,8 +378,8 @@ font-family: 'Lobster', cursive;
 }
 
 .polaroid {
-  width: 85%;
-  height: 75vh;
+  width: 88%;
+  height: 440px;
   position: absolute;
   float: left;
   background: #1e1c18;
@@ -390,6 +390,7 @@ font-family: 'Lobster', cursive;
   overflow: hidden;
   left: 0;
   right: 0;
+  top: 10px;
   margin: auto;
   -webkit-transform: rotate(-2deg);
           transform: rotate(-2deg);
@@ -405,8 +406,8 @@ font-family: 'Lobster', cursive;
           backface-visibility: hidden;
   background-position: center;
   background-size: cover;
-  -webkit-animation: fade-in 20s ease-in;
-          animation: fade-in 20s ease-in;
+  -webkit-animation: fade-in 1.5s ease-in;
+          animation: fade-in 1.5s ease-in;
   -webkit-animation-iteration-count: 1;
           animation-iteration-count: 1;
 }
